--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+streamlit
+langchain
+langchain-community
+ctransformers
+transformers
+sentencepiece
 sentence-transformers
 uvicorn
-ctransformers
-langchain
 python-box
-streamlit
